# ParaCL

./: .gitignore  CMakeLists.txt  README.md  emil_test.txt  grammar.l  grammar.y  lex.yy.cc  main.cc  test.prcl  test.txt
ast/: node.hpp  op_type.hpp  test.cc  test.cxx  tree.hpp
ast/logs/: dump.sh  log_graphviz.dot
ast/logs/graphviz/: graphviz0.dot
old/parser/: driver.cc  grammar.cc  grammar.l  grammar.y  grammar_old.y  numdriver.hpp
old/test/: expr.prcl  test.prcl
old/tree/: para_tree.hpp  para_tree_new.hpp
parser/: CMakeLists.txt  driver.cc  driver.hpp  grammar.l  grammar.y  grammar_old.y  lexer.l  numdriver.hpp
symtab/: symtab.hpp
test/: expr.prcl  factorial.c  factorial.prcl  fibonacci.c  fibonacci.prcl  te.c  test.cc  test.prcl  test.sh  unary.prcl
test/c_analog/: c_test.c
test/simple/: 01.prcl  03.prcl  04.prcl  05.prcl  08.prcl  09.prcl  10.prcl  11.prcl  12.prcl  13.prcl  14.prcl  15.prcl  16.prcl
test/work_examples/: factorial.prcl  pow.prcl
tree/: node_old.hpp  para_tree.hpp  para_tree_old_old.hpp  tree.cpp  tree.hpp
